# mangarip

./: Cargo.toml  README.md
src/: error.rs  host.rs  lib.rs  main.rs  scrape.rs  url.rs  web_util.rs
src/book/: chapter.rs  fetch.rs  host.rs  mod.rs  page.rs  toc.rs
src/lib/: error.rs  mod.rs  web.rs
src/lib/book/: chapter.rs  host.rs  mod.rs
src/lib/book_old/: chapter.rs  host.rs  mod.rs  page.rs
src/manga/: book.rs  mod.rs  web_utils.rs
src/old/: main.rs
src/scrape/: custom.rs  mod.rs  simple.rs  standard.rs
tests/: book_request.rs  url_request.rs  url_request_test.rs  web_util_test.rs
