[package]
name = "mangarip"
version = "0.1.0"
authors = ["Hermitter <chacin.carlos9798@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
structopt = "0.3.7"
surf = "1.0.3"
async-std = "1.4.0"
kuchiki = "0.8.0"