[package]
name = "mangarip"
version = "0.1.0"
authors = ["Carlos Chacin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
surf = "1.0.3"
async-std = "1.4.0"
tokio = { version = "0.2.9", features = ["full"] }
kuchiki = "0.8.0"
futures = "0.3.1"
image = "0.22.4"
regex = "1.3"